# inventory-practice

./: .dockerignore  .gitignore  README.md
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  metrics.csv
backend/migrations/: 20240101000001_create_products.sql  20240101000002_create_devolutions.sql  20240101000003_benchmark_metrics.sql
backend/scripts/: benchmark_compare.sh  demo.sh
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: mod.rs
backend/src/handlers/: benchmark.rs  devolutions.rs  mod.rs  products.rs  stress.rs
backend/src/metrics/: mod.rs
backend/src/models/: devolution.rs  mod.rs  product.rs
backend/src/seed/: mod.rs
backend/src/sets/: mod.rs
frontend/: README.md  app.js  index.html  package.json  style.css
